--- a/Client_side/Student-portal/src/app/app.component.html
+++ b/Client_side/Student-portal/src/app/app.component.html
@@ -1,5 +1,5 @@
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
 <!--
-<app-home></app-home>
-<app-student-reg></app-student-reg>
--->
 <app-user-form></app-user-form>
+-->
