--- a/Client_side/Student-portal/src/app/Components/navbar/navbar.component.html
+++ b/Client_side/Student-portal/src/app/Components/navbar/navbar.component.html
@@ -22,6 +22,9 @@
           <li class="nav-item">
             <a class="nav-link">Contact Us</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/library">Library</a>
+          </li>
         </ul>
       </div>
     </div>
