--- a/Client_side/Student-portal/src/app/Components/navbar/navbar.component.html
+++ b/Client_side/Student-portal/src/app/Components/navbar/navbar.component.html
@@ -1,31 +1,35 @@
 <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="" href="#">Home</a>
-          </li>
-        
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/register">Resgister Yourself</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link " routerLink="/registeredStudents">Resgistered Student</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/library">Library</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="" href="#">Home</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register">Resgister Yourself</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " routerLink="/registeredStudents">Resgistered Student</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contactUs">Contact Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/library">Library</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/pipe">Pipe Demo</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
