--- a/Sprint 2 Presentation/Angular/Sprint2FrontEnd/src/app/Components/nav-bar/nav-bar.component.html
+++ b/Sprint 2 Presentation/Angular/Sprint2FrontEnd/src/app/Components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills nav-fill">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
+      <a class="nav-link active" aria-current="page" routerLink="">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/addbook">Add a book</a>
