added author and reader service to use case

--- a/Sprint 2 Presentation/Angular/Sprint2FrontEnd/src/app/Components/nav-bar/nav-bar.component.html
+++ b/Sprint 2 Presentation/Angular/Sprint2FrontEnd/src/app/Components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-pills nav-fill">
+<ul class="nav nav-pills nav-fill" style="background-color:  rgb(199, 216, 247)">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" routerLink="">Home</a>
     </li>
