--- a/Sprint 2 Presentation/Angular/Sprint2FrontEnd/src/app/Components/add-book/add-book.component.html
+++ b/Sprint 2 Presentation/Angular/Sprint2FrontEnd/src/app/Components/add-book/add-book.component.html
@@ -4,12 +4,13 @@
   <title></title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <script src="src/app/Components/add-book/add-book.component.js"></script>
 </head>
-<body style="background-color: rgb(199, 216, 247)">
-
-<div class="container mt-3" style="background-color: rgb(241, 241, 241); padding-top: 20px;border-radius: 15px;">
-  <h3 style="text-align: center; background-color:  rgb(224, 231, 243)">Enter book details here and submit</h3>
+<body style="background-color: rgb(199, 216, 247); padding-left: 200px; padding-right: 200px;">
+  <script src="src/app/Components/add-book/add-book.component.js"></script>
+<div class="container mt-3" style="background-color: rgb(241, 241, 241);
+ padding-top: 20px;padding-left: 100px; padding-right: 100px;border-radius: 15px;">
+  <h3 style="text-align: center;border-radius: 10px; background-color:  rgb(224, 231, 249)">Enter book details here and submit</h3>
     
   <form action="/action_page.php" #myForm="ngForm" class="was-validated" name="myform">
     <div class="mb-3 mt-3">
@@ -26,7 +27,7 @@
 
       <div class="mb-3 mt-3">
         <label for="bookauthor" class="form-label">Book Author:</label>
-        <input  [(ngModel)]=book.bookAuthor type="text" class="form-control" id="bookauthor" placeholder="Enter here" name="bookauthor" required>
+        <input  [(ngModel)]=book.bookAuthor type="text" class="form-control" onblur="validateForm()" id="bookauthor" placeholder="Enter here" name="bookauthor" required>
         <div class="invalid-feedback">Please fill out this field.</div>
       </div>
 
