--- a/UseCase/Angular/UseCase_FrontEnd/src/app/Components/login/login.component.html
+++ b/UseCase/Angular/UseCase_FrontEnd/src/app/Components/login/login.component.html
@@ -1,12 +1,12 @@
-<section class="h-100 gradient-form" style="background-color: #eee;">
-    <div class="container py-5 h-100">
+<!-- <section class="h-1000 gradient-form gradient-custom-4" style="background-color: #eee;"> -->
+  <body style="background-color: #151b3f;">
+    <div class="container py-1 h-10 " style="background-color: #61112e;">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-xl-10">
           <div class="card rounded-3 text-black">
             <div class="row g-0">
               <div class="col-lg-6">
                 <div class="card-body p-md-5 mx-md-4">
-  
                   <div class="text-center">
                     <img src="https://assets.entrepreneur.com/content/3x2/2000/publish-a-book-and-prosper-as-a-small-biz-owner.jpg"
                       style="width: 185px;" alt="logo">
@@ -15,7 +15,7 @@
   
                   <form>
                     <p>Please login to your account</p>
-  
+                    
                     <div class="form-outline mb-4">
                       <input type="email" id="form2Example11" class="form-control"
                         placeholder="Enter user name or email id" />
@@ -25,6 +25,22 @@
                     <div class="form-outline mb-4">
                       <input type="password" id="form2Example22" class="form-control" />
                       <label class="form-label" for="form2Example22">Password</label>
+                    </div>
+                    
+                    <div class="form-outline mb-4" style="margin-bottom: 5px;">
+                      Login as :
+                      <div class="form-check" style="margin-left: 100px;">
+                        <input value="author" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <label class="form-label" for="flexRadioDefault1">
+                          Author
+                        </label>
+                      </div>
+                      <div class="form-check" style="margin-left: 100px;">
+                        <input value="reader" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                        <label class="form-label" for="flexRadioDefault2">
+                          Reader
+                        </label>
+                      </div>
                     </div>
                     
                     <div class="text-center pt-1 mb-5 pb-1">
@@ -38,20 +54,22 @@
                       <p class="mb-0 me-2">Don't have an account?</p>
                       <button type="button" class="btn btn-primary" routerLink="/register">Create new</button>
                     </div>
-  
+                    
                   </form>
   
                 </div>
               </div>
-              <div class="col-lg-6 d-flex align-items-center gradient-custom-4">
+             <div class="col-lg-6 d-flex align-items-center gradient-custom-4">
                 <div class="text-white px-3 py-4 p-md-5 mx-md-4">
-                  <h4 class="mb-4">Please login as an Author or Reader</h4>
+                  <h4 class="mb-4">Please login as an Author or Reader by selecting the Role section</h4>
                   <p class="small mb-0"> You can also go and read books as a guest</p>
                 </div>
               </div>
+          
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </body>
+  <!-- </section> -->
