--- a/UseCase/Angular/UseCase_FrontEnd/src/app/Components/register/register.component.html
+++ b/UseCase/Angular/UseCase_FrontEnd/src/app/Components/register/register.component.html
@@ -1,8 +1,6 @@
 <div>
 <body >
-<section class="vh-100 bg-image"
-  style="background-image: url('https://th.bing.com/th/id/OIP.ZThCH8z_uLWrNWYHCUOwtgHaEK?pid=ImgDet&rs=1');">
-  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+<div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-9 col-lg-7 col-xl-6">
@@ -11,43 +9,57 @@
               <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
               <form>
-
                 <div class="form-outline mb-4">
-                  <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                  <input [(ngModel)]=userName type="text" id="form3Example1cg" class="form-control form-control-lg" name="username" />
                   <label class="form-label" for="form3Example1cg">Your Name</label>
                 </div>
 
                 <div class="form-outline mb-4">
-                  <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
+                  <input [(ngModel)]=emailId type="email" id="form3Example3cg" class="form-control form-control-lg" name="emailId"/>
                   <label class="form-label" for="form3Example3cg">Your Email</label>
                 </div>
-                 
+<!--                 
                 <div class="form-outline mb-4">
                     <input type="text" id="form3Example5cg" class="form-control form-control-lg" />
                     <label class="form-label" for="form3Example5cg">Enter User Name (unique for you)</label>
                   </div>
-             
-<!--
                 <div class="form-outline mb-4">
                   <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
                   <label class="form-label" for="form3Example4cg">Password</label>
                 </div>
 -->
                 <div class="form-outline mb-4">
-                  <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
+                  <input [(ngModel)]=password type="password" id="form3Example4cdg" class="form-control form-control-lg"name="password" />
                   <label class="form-label" for="form3Example4cdg">Enter password</label>
                 </div>
 
+                <div class="form-outline mb-4" style="margin-bottom: 5px;">
+                  Register as :
+                  <div class="form-check" style="margin-left: 100px;">
+                    <input [(ngModel)]=role value="author" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                    <label class="form-label" for="flexRadioDefault1">
+                      Author
+                    </label>
+                  </div>
+                  <div class="form-check" style="margin-left: 100px;">
+                    <input [(ngModel)]=role value="reader" class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                    <label class="form-label" for="flexRadioDefault2">
+                      Reader
+                    </label>
+                  </div>
+                </div>
+<!--
                 <div class="form-check d-flex justify-content-center mb-5">
                   <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
                   <label class="form-check-label" for="form2Example3g">
-                    I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
+                    I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a> 
                   </label>
                 </div>
-
+-->
                 <div class="d-flex justify-content-center">
                   <button type="button"
-                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body" (click)=" register()">
+                    Register</button>
                 </div>
 
                 <p class="text-center text-muted mt-5 mb-0">Have already an account? <a routerLink="/login"
@@ -61,6 +73,6 @@
       </div>
     </div>
   </div>
-</section>
+
 </body>
 </div>
