--- a/UseCase/Angular/UseCase_FrontEnd/src/app/Components/home/home.component.html
+++ b/UseCase/Angular/UseCase_FrontEnd/src/app/Components/home/home.component.html
@@ -17,6 +17,9 @@
             <a class="nav-link" routerLink="/register">Register</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" routerLink="/searchbook">Search books</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link disabled">Contact Us</a>
           </li>
         </ul>
