--- a/UseCase/Angular/UseCase_FrontEnd/src/app/Components/createbook/createbook.component.html
+++ b/UseCase/Angular/UseCase_FrontEnd/src/app/Components/createbook/createbook.component.html
@@ -10,7 +10,7 @@
   <script src="src/app/Components/add-book/add-book.component.js"></script>
 <div class="container mt-3" style="background-color: rgb(241, 241, 241);
  padding-top: 20px;padding-left: 100px; padding-right: 100px;border-radius: 15px;">
-  <h3 style="text-align: center;border-radius: 10px; background-color:  rgb(224, 231, 249)">{{authorId}}Enter book details here and submit</h3>
+  <h3 style="text-align: center;border-radius: 10px; background-color:  rgb(224, 231, 249)">Enter book details here and submit</h3>
     
   <form action="/action_page.php" #myForm="ngForm" class="was-validated" name="myform">
 
