--- a/UseCase/Angular/UseCase_FrontEnd/src/app/Components/home/home.component.html
+++ b/UseCase/Angular/UseCase_FrontEnd/src/app/Components/home/home.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Book Library</a>
+      <a class="navbar-brand" routerLink="/main">Book Library</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -9,7 +9,8 @@
  <!--        <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
--->          
+-->         
+
           <li class="nav-item">
             <a class="nav-link" routerLink="/login">Login</a>
           </li>
