--- a/UseCase/Angular/UseCase_FrontEnd/src/app/Components/searchbook/searchbook.component.html
+++ b/UseCase/Angular/UseCase_FrontEnd/src/app/Components/searchbook/searchbook.component.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="src/app/Components/add-book/add-book.component.js"></script>
 </head>
-<body style="background-color: rgb(199, 216, 247); padding-left: 600px; padding-right: 600px;">
+<body style="background-color: rgb(199, 216, 247); padding-left: 400px; padding-right: 400px;">
   <script src="src/app/Components/add-book/add-book.component.js"></script>
 <div class="container mt-3" style="background-color: rgb(241, 241, 241);
  padding-left: 100px; padding-right: 100px;border-radius: 15px;">
@@ -43,12 +43,40 @@
       </div>
      
 
-  <button type="submit" style="margin-bottom: 10px;" [disabled]="!myForm.valid" class="btn btn-primary">Submit</button>
-  <button class="btn btn-secondary" routerLink="/register" style="margin-left: 50px; margin-bottom: 10px; ">
-      Click here to register as an author or reader</button>
+  <button type="submit" style="margin-bottom: 10px;" (click)="searchbook()" [disabled]="!myForm.valid" class="btn btn-primary">
+    Submit</button>
+  <button class="btn btn-secondary" routerLink="/register" style=" margin-left: 60px; margin-bottom: 10px; ">
+      If you are a Guest click here to register as an author or reader</button>
 
   </form>
 </div>
-<script src="src/app/Components/add-book/add-book.component.js"></script>
-</body>
-</html>
+
+<table class="table">
+  <thead>
+    <tr style="margin-left: 30px;">
+      <th scope="col">Book Logo</th>
+      <th scope="col">Book ID</th>
+      <th scope="col">Book Title</th>
+      <th scope="col">Book Category</th>
+      <th scope="col">Book Price</th>
+      <th scope="col">Book Author</th>
+      <th scope="col">Book Publisher</th>
+      <th scope="col">Blocked</th>
+      
+    </tr>
+  </thead>
+  <tbody
+  style="background-color: rgb(199, 216, 247); font-family: Arial; padding-left: 5px;">
+    <tr *ngFor="let book of books;index as i">
+      <td ><img src="{{book.logo}}" width="50px" height="60px"/></td>
+      <td  style="padding: 25px;">{{book.bookID}}</td>
+      <td *ngIf="book.blocked=='no'" style="padding: 25px;">{{book.title}}</td>
+      <td *ngIf="book.blocked=='no'" style="padding: 25px;">{{book.category}}</td>
+      <td *ngIf="book.blocked=='no'" style="padding: 25px;">{{book.price}}</td>
+      <td *ngIf="book.blocked=='no'" style="padding: 25px;">{{book.author}}</td>
+      <td *ngIf="book.blocked=='no'" style="padding: 25px;">{{book.publisher}}</td>
+      <td *ngIf="book.blocked=='no'" style="padding: 25px;">{{book.blocked}}</td>
+      <td *ngIf="book.blocked=='yes'"> This is book is currently blocked</td>
+    </tr> 
+  
+  </tbody>
