--- a/UseCase/Angular/UseCase_FrontEnd/src/app/Components/login/login.component.html
+++ b/UseCase/Angular/UseCase_FrontEnd/src/app/Components/login/login.component.html
@@ -1,7 +1,7 @@
 <!-- <section class="h-1000 gradient-form gradient-custom-4" style="background-color: #eee;"> -->
   <body style="background-color: #151b3f; padding-top: 10px;
   background-image: url('https://www.pixelstalk.net/wp-content/uploads/images6/Black-Background-Free-Download-620x388.jpg');">
-    <div class="container py-1 h-10 " style="background-color: #290d17;">
+    <div class="container py-1 h-10 " style="background-color: #270a1b;">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-xl-10">
           <div class="card rounded-3 text-black">
@@ -11,7 +11,7 @@
                   <div class="text-center">
                     <img src="https://assets.entrepreneur.com/content/3x2/2000/publish-a-book-and-prosper-as-a-small-biz-owner.jpg"
                       style="width: 185px;" alt="logo">
-                    <h4 class="mt-1 mb-5 pb-1">Book Library</h4>
+                    <h4 class="mt-1 mb-5 pb-1">Login to Book Library</h4>
                   </div>
   
                   <form>
