--- a/UseCase/Angular/UseCase_FrontEnd/src/app/Components/authorbooks/authorbooks.component.html
+++ b/UseCase/Angular/UseCase_FrontEnd/src/app/Components/authorbooks/authorbooks.component.html
@@ -4,6 +4,8 @@
     click here to create a book
     <button type="button" class="btn btn-outline-primary" (click)="createBook()">
         Create</button>
+        <button style="margin-left: 1250px;" type="button" class="btn btn-primary" routerLink="/login">
+          Logout</button>
         
 </div>
 <div  style="padding-left: 40px;margin-top: 10px; background-color:rgb(199, 216, 247);">
@@ -28,7 +30,7 @@
     </thead>
     <tbody style="background-color: rgb(199, 216, 247); font-family: Arial; padding-left: 5px;">
       <tr *ngFor="let book of books;index as i">
-        <td><img src="{{book.logo}}" width="50px" height="60px"/></td>
+        <td><img src="{{book.logo}}" width="65px" height="80px"/></td>
         <td style="padding: 25px;">{{book.bookID}}</td>
         <td style="padding: 25px;">{{book.title}}</td>
         <td style="padding: 25px;">{{book.category}}</td>
