--- a/UseCase/Angular/UseCase_FrontEnd/src/app/Components/readerbooks/readerbooks.component.html
+++ b/UseCase/Angular/UseCase_FrontEnd/src/app/Components/readerbooks/readerbooks.component.html
@@ -3,7 +3,8 @@
     To fetch all the books from library click here 
     <button type="button" class="btn btn-outline-primary" (click)="getAllBooks()">
         Get</button>
-        <button style="margin-left: 1100px;" type="button" class="btn btn-primary" routerLink="/login">
+        <button style="margin-left: 110
+        0px;" type="button" class="btn btn-primary" routerLink="/login">
           Logout</button>
 </div>
 <div  style="padding-left: 40px;margin-top: 10px; background-color:rgb(199, 216, 247);">
