--- a/Mentor Training/UseCase-1/Angular/BankManagementSystem/src/app/Components/account-details/account-details.component.html
+++ b/Mentor Training/UseCase-1/Angular/BankManagementSystem/src/app/Components/account-details/account-details.component.html
@@ -1,7 +1,7 @@
 <div  style="padding-left: 40px;margin-top: 10px; background-color:rgb(199, 216, 247);">
     To apply a loan click here 
     <button type="button" class="btn btn-outline-primary" (click)="applyLoan()">
-        Get</button>
+         Apply Loan </button>
         <button style="margin-left: 1300px;"
          type="button" class="btn btn-primary" routerLink="/login">
           Logout</button>
@@ -10,6 +10,11 @@
     To fetch all your loans click here 
   <button type="button" class="btn btn-outline-primary" (click)="getMyLoans()">
       Get</button>
+</div>
+<div  style="padding-left: 40px;margin-top: 10px; background-color:rgb(199, 216, 247);">
+  To update your account click here
+<button type="button" class="btn btn-outline-primary" (click)="updateAccount()">
+    Update your details</button>
 </div>
 
 <table class="table">
