--- a/Mentor Training/UseCase-2/UITransactionManagementSys/src/app/Components/account-details/account-details.component.html
+++ b/Mentor Training/UseCase-2/UITransactionManagementSys/src/app/Components/account-details/account-details.component.html
@@ -1,74 +1,83 @@
-<div  style="padding-left: 40px;margin-top: 10px; background-color:rgb(199, 216, 247);">
-    To apply a loan click here 
-    <button type="button" class="btn btn-outline-primary" >
-         Apply Loan </button>
-        <button style="margin-left: 1300px;"
-         type="button" class="btn btn-primary" routerLink="/login">
-          Logout</button>
+<div style="background-color: aliceblue ;" class="div-img">
+<div class="con" style="padding-left: 40px;margin-top: 10px;">
+ 
+  <button  type="button" class="btn btn-primary btn-right" routerLink="/login">
+    Logout</button>
 </div>
-<div  style="padding-left: 40px;margin-top: 10px; background-color:rgb(199, 216, 247);">
-    To fetch all your loans click here 
-  <button type="button" class="btn btn-outline-primary" >
-      Get</button>
+<div class="container" style="padding-left: 40px;margin-top: 10px; background-color:rgb(199, 216, 247);">
+  To fetch all your transactions click here
+  <button style="padding: 10px; margin-left: 10px;" type="button" class="btn btn-outline-primary" (click)="getAllTransactions()">
+    Get</button>
 </div>
-<div  style="padding-left: 40px;margin-top: 10px; background-color:rgb(199, 216, 247);">
+<div  style="padding: 10px;" class="container" style="padding-left: 40px;margin-top: 10px; background-color:rgb(199, 216, 247);">
   To update your account click here
-<button type="button" class="btn btn-outline-primary" (click)="updateAccount()">
+  <button  style="padding: 10px; margin-left: 10px;" type="button" class="btn btn-outline-primary" (click)="updateAccount()">
     Update your details</button>
 </div>
 
 
-
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
+<div class="container">
+<button type="button" class="btn btn-primary btn-lg btn-center" data-bs-toggle="modal" data-bs-target="#targetModal">
+  Send Money
 </button>
-
+</div>
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal" id="targetModal">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
       <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <form class="was-validated"> 
+
+          <div class="mb-3 mt-3"> 
+            <label for="name" class="form-label">Vendor AccountID :</label>
+            <input [(ngModel)]=request.vendorAccountId type="text" class="form-control" id="name" 
+            placeholder="Enter here" name="name" required>
+            <div class="invalid-feedback">Please fill out this field.</div>
+          </div>
+      
+          <div class="mb-3 mt-3">
+              <label for="bookgenre" class="form-label">Amount :</label>
+              <input  [(ngModel)]=request.amount type="text" class="form-control" id="bookgenre" 
+              placeholder="Enter here" name="bookgenre" required>
+              <div class="invalid-feedback">Please fill out this field.</div>
+            </div>
+          <div>
+            <button class="btn btn-primary" (click)="saveTransaction()">
+                Submit
+            </button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
 </div>
 
+</div>
 
 
 <table class="table">
-    <thead>
-      <tr style="margin-left: 30px;">
-        <th scope="col">LoanID</th>
-        <th scope="col">Loan Type</th>
-        <th scope="col">Loan Amount</th>
-        <th scope="col">Applied Date</th>
-        <th scope="col">Rate Of Interest</th>
-        <th scope="col">Tenure</th>
-      </tr>
-    </thead>
-  
-    <tbody style="background-color: rgb(199, 216, 247); font-family: Arial; padding-left: 5px;">
-  <!-- <tr *ngFor="let loan of allLoans;index as i">
-        <td style="padding: 25px;">{{loan.loanId}}</td>
-        <td style="padding: 25px;">{{loan.loanType}}</td>
-        <td style="padding: 25px;">{{loan.loanAmount}}</td>
-        <td style="padding: 25px;">{{loan.appliedDate}}</td>
-        <td style="padding: 25px;">{{loan.rateOfInterest}}</td>
-        <td style="padding: 25px;">{{loan.duration}}</td>
-    
-      </tr> 
-    -->   
-    </tbody>
-  
+  <thead>
+    <tr style="margin-left: 30px;">
+      <th scope="col">TransactionID</th>
+      <th scope="col">Transaction Type</th>
+      <th scope="col">Training Amount</th>
+      <th scope="col">Vendor AccountID</th>
+      <th scope="col">Transaction Date</th>
+      <th scope="col">Available Amount</th>
+    </tr>
+  </thead>
 
+  <tbody style="background-color: rgb(199, 216, 247); font-family: Arial; padding-left: 5px;">
+    <tr *ngFor="let transaction of transactions;index as i">
+      <td style="padding: 25px;">{{transaction.tranactionId}}</td>
+      <td style="padding: 25px;">{{transaction.transactionType}}</td>
+      <td style="padding: 25px;">{{transaction.transactionAmount}}</td>
+      <td style="padding: 25px;">{{transaction.vendorAccountId}}</td>
+      <td style="padding: 25px;">{{transaction.transactionDate}}</td>
+      <td style="padding: 25px;">{{transaction.finalAmount}}</td>
 
+    </tr>
+
+  </tbody>
+  
